# NURBSDEMO

./: .gitignore  Blueprints.json  CMakeLists.txt  NodeEditor.json  README.md  imgui.ini
Doc/: Geomerty.md
Res/: res  ressurface
Source/: CMakeLists.txt  DebugDraw.cpp  main.cpp  nurbs_share.cpp  (+4 more)
Source/filamentdemo/: CMakeLists.txt  main.cpp
Source/filamentdemo/include/filamentapp/: Config.h  FilamentApp.h
Source/filamentdemo/src/: FilamentApp.cpp
Source/geomerty_process/: CMakeLists.txt  ServiceLocator.cpp  graph.h  io_helper.h  main.cpp  mat_vec.h  mesh.h  mesh_element.cpp  nodes.h  properties.h  read_mesh.cpp  read_mesh.h  readmesh_node.h  smooth.cpp  smooth.h  smoothmesh_node.h  string_node.h  surface_mesh.cpp  surface_mesh.h  types.h
Source/geomerty_process/algorithm/: mesh_triangulate.cpp  mesh_triangulate.h  parametrization.cpp  parametrization.h  smooth.cpp  smooth.h  util.cpp  util.h
Source/geomerty_process/core/: ServiceLocator.cpp  ServiceLocator.h  exceptions.h  graph.cpp  graph.h  io_helper.h  mat_vec.h  nodes.h  read_mesh.cpp  read_mesh.h  surface_mesh.cpp  surface_mesh.h  types.h
Source/geomerty_process/gl/: EPS.cpp  LinSpaced.h  MeshGL.h  PI.h  SortableRow.h  Viewer.h  ViewerCore.cpp  ViewerData.cpp  ViewerData.h  axis_angle_to_quat.cpp  canonical_quaternions.cpp  centroid.cpp  centroid.h  circumradius.cpp  cotmatrix.cpp  cotmatrix_entries.cpp  create_index_vbo.h  create_shader_program.cpp  create_shader_program.h  default_num_threads.cpp  destroy_shader_program.cpp  destroy_shader_program.h  dihedral_angles.h  dot.cpp  dot.h  doublearea.cpp  frustum.cpp  get_seconds.cpp  internal_angles.cpp  massmatrix.cpp  massmatrix.h  massmatrix_intrinsic.h  material_colors.h  normalize_quat.h  ortho.cpp  print_shader_info_log.cpp  print_shader_info_log.h  project.h  quat_to_mat.cpp  read_pixels.cpp  (+12 more)
Source/geomerty_process/glviewer/: EPS.h  IndexComparison.h  MeshGL.cpp  MeshGL.h  Viewer.cpp  Viewer.h  ViewerCore.cpp  ViewerCore.h  ViewerData.cpp  ViewerData.h  axis_angle_to_quat.h  barycenter.cpp  barycenter.h  bind_vertex_attrib_array.cpp  bind_vertex_attrib_array.h  canonical_quaternions.h  circumradius.h  colon.cpp  colon.h  colormap.cpp  colormap.h  cotmatrix.h  cotmatrix_entries.h  create_index_vbo.cpp  create_index_vbo.h  create_shader_program.cpp  create_shader_program.h  cross.cpp  cross.h  default_num_threads.h  destroy_shader_program.cpp  destroy_shader_program.h  dihedral_angles.cpp  dot.h  doublearea.h  edge_lengths.cpp  edge_lengths.h  face_areas.cpp  face_areas.h  frustum.h  (+54 more)
Source/geomerty_process/mesh/: mesh.h  mesh_element.h  mesh_index_range.h  properties.h  range.h
Source/geomerty_process/nodes/: nurbs_arc_node.cpp  nurbs_arc_node.h  nurbscurve_bendnode.cpp  nurbscurve_bendnode.h  nurbscurve_loadnode.cpp  nurbscurve_loadnode.h  nurbscurve_splitnode.cpp  nurbscurve_splitnode.h  nurbssurface_create_node.cpp  nurbssurface_create_node.h  nurbssurface_loadnode.cpp  nurbssurface_loadnode.h  nurbssurface_splitnode.cpp  nurbssurface_splitnode.h  parametrization_node.cpp  parametrization_node.h  readmesh_node.cpp  readmesh_node.h  shapes_node.cpp  shapes_node.h  smoothmesh_node.cpp  smoothmesh_node.h  string_node.cpp  string_node.h
Source/geomerty_process/nurbs/: nous_evalute_nurbs_curve.h  nous_evalute_nurbs_surface.h  nous_nurbs_api.h  nous_nurbs_curve.h  nous_nurbs_surface.h  nous_nurbs_util.h  nurbs_curve.h  nurbs_evalute_curve.h  nurbs_evalute_surface.h  nurbs_io.h  nurbs_make.h  nurbs_surface.h  nurbs_util.h
Source/geomerty_process/panels/: AssetBrowser.cpp  AssetBrowser.h  ControllerView.cpp  ControllerView.h
Source/imguinode/: CMakeLists.txt  main.cpp
(+12 files in other folders)
